k8s-work/aline-eks-my/ingress-files/ms-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: aline-fargate-ns-my
  name: aline-ingress-my
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /users*
            backend:
              serviceName: user-service-my
              servicePort: 8070
          - path: /login*
            backend:
              serviceName: user-service-my
              servicePort: 8070
          - path: /applic*
            backend:
              serviceName: underwriter-service-my
              servicePort: 8071
          - path: /members*
            backend:
              serviceName: bank-service-my
              servicePort: 8083
          - path: /branch*
            backend:
              serviceName: bank-service-my
              servicePort: 8083
          - path: /bank*
            backend:
              serviceName: bank-service-my
              servicePort: 8083
          - path: /trans*
            backend:
              serviceName: transaction-service-my
              servicePort: 8073
